--- a/Practical_5/Hostel_Maintenance.html
+++ b/Practical_5/Hostel_Maintenance.html
@@ -62,4 +62,16 @@
     <textarea id="issue-description" name="issue-description" rows="5" cols="50"placeholder="Please provide a detailed description of the issue you are facing" required 20-500 characters></textarea><br><br>
 
 </form>
+<head>
+    <title>Document</title>
+    <style>
+        h2 {
+            color:red;
+        }
+        h3 {
+            color:blue;
+        }
+    </style>
+</head>
+
 </html>
