--- a/Practical_3/Student_profile.html
+++ b/Practical_3/Student_profile.html
@@ -22,16 +22,51 @@
 
 <img src="profile1.PNG.png" alt="My Profile picture"width="150"/>
 <img src="coding2.PNG.png" alt="Coding"width="200" />
-<ul>
-    <li><h3>Class Schedule</h3>
-        <ol><h4>
-            <li>DZO101, CSF101, NWC201</li>
-            <li>MAT205, DZO101, CSF101</li>
-            <li>NWC201, SDA101, NWC201</li>
-            <li>DZO101, MAT205, SAD101</li>
-            <li>MAT205, NWC201</li></h4>
-        </ol></li>
-</ul>
+
+<section id="schedule">
+        <h3>Daily Class Schedule</h3>
+        <ul><h4>
+            <li><strong>Monday:</strong>
+                <ol>
+                    <li>DZG101</li>
+                    <li>CSF101</li>
+                    <li>CSF101</li>
+                    <li>NWC201(P)</li>
+                </ol>
+            </li>
+            <li><strong>Tuesday:</strong>
+                <ol>
+                    <li>MAT205</li>
+                    <li>DZG101</li>
+                    <li>DZG101</li>
+                    <li>CSF(P)</li>
+                </ol>
+            </li>
+            <li><strong>Wednesday:</strong>
+                <ol>
+                    <li>NWC201</li>
+                    <li>SDA101</li>
+                    <li>SDA101</li>
+                    <li>NWC201(P)</li>
+                </ol>
+            </li>
+            <li><strong>Thursday:</strong>
+                <ol>
+                    <li>DZG101(T)</li>
+                    <li>MAT205</li>
+                    <li>MAT205</li>
+                    <li>SDA101(P)</li>
+                </ol>
+            </li>
+            <li><strong>Friday:</strong>
+                <ol>
+                    <li>MAT205</li>
+                    <li>NWC201</li>
+                    <li>NWC201</li>
+                </ol>
+            </li></h4>
+        </ul>
+    </section>
 <ul>
     <li><h3>Week end List</h3>
         <ul type = "circle"><h4>
@@ -40,8 +75,8 @@
             <li>Laundary</li>
             <li>Study</li>
             <li>Reading novels</li>
-            <li>Gym</li>
-            <li>Watching drama</li>
+            <li>Writing Notes</li>
+            <li>Games</li>
         </h4></ul></li>
 </ul>
 
@@ -49,42 +84,20 @@
     <title>Document</title>
     <style>
         h2 {
-            color:red;
+            color:rgb(176, 21, 21);
         }
         h3 {
-            color:blue;
+            color:rgb(13, 13, 140);
         }
         h4 {
-            color:rgba(0, 98, 255, 0.699);
+            color:rgba(3, 60, 151, 0.699);
         }
         .background-style {
-            background-color:black;
+            background-color:rgb(11, 0, 0);
         }
         a:hover {
             color: blueviolet;
         }
     </style>
 </head>
-
- <body>
-    <h2>Box Model example</h2>
-    <div class="container">This is a box</div>
-
-    <h1>Layout example</h1>
-    <div class="container">
-        <div class="item">Item1</div>
-        <div class="item">Item2</div>
-        <div class="item">Item3</div>
-    </div>
-</body>
-
-<!-- Basic div grouping -->
- <div class="container">
-    <h3>My content</h3>
-    <h4>
-        <p>Nmae : Kinley Wangmo</p>
-        <p>Department : Software department</p>
-    </h4>
- </div>
-
 </html>
